# realm-db-reader

./: Cargo.toml  DETAILS.md  README.md  headerflags.txt  structure.txt
.github/workflows/: publish.yaml  test.yaml
src/: build.rs  column.rs  debug.rs  error.rs  group.rs  index.rs  lib.rs  main.rs  model.rs  node.rs  realm.rs  spec.rs  table.rs  traits.rs  utils.rs  value.rs
src/array/: array_basic.rs  array_link_list.rs  array_string.rs  array_string_short.rs  array_timestamp.rs  generic_array.rs  integer_array.rs  long_blobs_array.rs  mod.rs  scalar_array.rs  small_blobs_array.rs
src/column/: backlink.rs  bool.rs  bool_optional.rs  bptree.rs  double.rs  float.rs  integer.rs  integer_optional.rs  link.rs  linklist.rs  mod.rs  string.rs  subtable.rs  timestamp.rs
src/table/: column.rs  header.rs  mod.rs  row.rs  spec.rs
src/value/: from.rs  into.rs  mod.rs
