[package]
name = "realm-db-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
hex = "0.4.3"
log = "0.4.27"
memmap2 = "0.9.5"
tracing = { version = "0.1.41", features = ["std", "log"] }

[dev-dependencies]
itertools = "0.14.0"
